--- a/examples/kubernetes/cpu.yaml
+++ b/examples/kubernetes/cpu.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: ollama
-        image: ollama/ollama:latest
+        image: ink-splatters/ollama:latest
         ports:
         - name: http
           containerPort: 11434
